fix https://gateway.statgram.org/api/v1/dashboard endpoint
